--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: HWtinker
 
 # Short bio or description (displayed in the header)
-description: Digial Design, Verilog, Hardware and more ...
+description: Digial Design, FPGA, Verilog, Hardware and more ...
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
